--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,8 @@
 # Version catalog for the project
 [versions]
 agp = "8.13.0"
-kotlin = "2.0.21"
+# Downgrade Kotlin a 1.9.10 para evitar la necesidad del plugin del compilador de Compose
+kotlin = "1.9.10"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -10,6 +11,10 @@ appcompat = "1.7.1"
 material = "1.13.0"
 activity = "1.10.1"
 constraintlayout = "2.2.1"
+
+# Jetpack Compose
+compose = "1.9.0"
+composeCompiler = "1.5.3"
 
 gson = "2.10.1"
 lifecycle = "2.9.4"
@@ -35,6 +40,12 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+
+# Compose libraries
+androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
+androidx-compose-material = { group = "androidx.compose.material", name = "material", version.ref = "compose" }
+androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "compose" }
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity" }
 
 # Added libraries for networking and coroutines
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
