--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,26 +9,25 @@ junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 appcompat = "1.7.1"
 material = "1.13.0"
-activity = "1.10.1"
+activity = "1.11.0"
 constraintlayout = "2.2.1"
 
 # Jetpack Compose
-compose = "1.9.0"
+compose = "1.9.4"
 
-gson = "2.10.1"
+gson = "2.13.2"
 lifecycle = "2.9.4"
 cardview = "1.0.0"
 
 # Added versions for networking and coroutines
 retrofit = "2.9.0"
-moshi = "1.15.0"
+moshi = "1.15.2"
 okhttp = "4.11.0"
 coroutines = "1.7.3"
 navigationFragmentKtx = "2.9.4"
 navigationUiKtx = "2.9.4"
 
-googleAuth = "20.6.0"
-facebookLogin = "16.3.0"
+googleAuth = "21.4.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -66,9 +65,8 @@ gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
 androidx-cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
 
-# Google Play Services Auth and Facebook Login
+# Google Play Services Auth
 google-play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "googleAuth" }
-facebook-login = { group = "com.facebook.android", name = "facebook-login", version.ref = "facebookLogin" }
 
 
 [plugins]
